--- a/public/css/introduce.css
+++ b/public/css/introduce.css
@@ -13,18 +13,20 @@
 	height: 400px;
 	min-width: 320px;
 	border-radius: 5px;
+	background-image: url('../images/login_bg.png');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 	.session-login .title-session{
 		color: #317EDA;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 2px solid #F5950D;
 		cursor: default;
 		font-weight: bold;
 		font-size: 26px;
 		height: 50px;
 		text-align: center;
 		padding-top: 5px;
-		background-color: #fff;
 	}
 		.session-login .title-session img{
 			margin-left: 10px;
@@ -54,13 +56,13 @@
 .loginbox {
     min-width: 320px;
     height: 400px;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.7);
     color: #ffffff;
     box-sizing: border-box;
     padding: 40px 30px;
 }
 
-h1 {
+.loginbox h1 {
     margin: 0;
     padding: 0 0 20px;
     text-align: center;
@@ -110,7 +112,15 @@ h1 {
     color: #ffc107;
 
 }
-
+.loginbox ul{
+    list-style: none;
+    padding-left: 10px;
+    color: #fff;
+    margin-top: -10px;
+}
+.loginbox ul li{
+    margin-bottom: 5px;
+}
 
 .text-intro{
 	padding-top: 20px;
@@ -128,3 +138,46 @@ h1 {
 	.text-intro p{
 
 	}
+@media (max-width: 568px) {
+	.text-intro{
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+}
+@media (min-width: 576px){
+	.col-md-4{
+		transform: translate(-30%,0);
+
+	}
+	.col-md-7{
+		transform: translate(20%,0);
+	}
+	.col-md-7,.col-md-4{
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 768px){
+	.col-md-4{
+		transform: translate(-30%,0);
+	}
+	.col-md-7{
+		transform: translate(10%,0);
+	}
+	.col-md-7,.col-md-4{
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media (min-width: 960px){
+	.col-md-4{
+		transform: translate(0,0);
+	}
+	.col-md-7{
+		transform: translate(0,0);
+	}
+	.col-md-7,.col-md-4{
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
